--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -288,6 +288,113 @@ footer a{
 	color: var(--white);
 	margin-left: 40px;
 }
+.title-4{
+	text-align: center;
+	margin-top: 80px;
+	margin-bottom: 20px;
+	font-size: 40px;
+	font-weight: 700;
+	line-height: 1.3;
+}
+.textforms {
+	margin-top: 60px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	column-gap: 200px;
+	row-gap: 30px;
+}
+.textform {
+	max-width: 500px;
+	border-radius: 10px;
+}
+.container-4 {
+	margin: 0 auto;
+	padding: 0 15px;
+	max-width: 2000px;
+	background-color: #eeeff1;
+}
+.text-field {
+	display: block;
+	width: 300px;
+	height: calc(2.25rem + 2px);
+	padding: 0.375rem 0.75rem;
+	font-family: inherit;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #212529;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: 1px solid #bdbdbd;
+	border-radius: 0.25rem;
+	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.text-field2 {
+	margin-left: 180px;
+	margin-top: 20px;
+	padding: 10px; 
+	width: 806px; 
+	height: 200px;
+	font-family: inherit;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #212529;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: 1px solid #bdbdbd;
+	border-radius: 0.25rem;
+	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	resize: none;
+}
+.buttn1{
+	margin: 0 auto;
+	display: inline-block;
+	height: 40px;
+	padding: 12px 28px;
+	border-radius: 4px;
+	background-color: var(--purple);
+	color: var(--white);
+	letter-spacing: 0.15px;
+	font-size: 16px;
+	font-weight: 500;
+	transition: opacity 0.2s ease-in;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	max-width: 300px;
+}
+.buttn_obomne1 {
+	margin: 0 auto;
+	display: inline-block;
+	height: 40px;
+	padding: 12px 28px;
+	border-radius: 4px;
+	background-color: var(--purple);
+	color: var(--white);
+	letter-spacing: 0.15px;
+	font-size: 16px;
+	font-weight: 500;
+	transition: opacity 0.2s ease-in;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	max-width: 300px;
+	margin-top: 20px;
+}
 .vks{
-	margin-top: 30px;
+	float: none;
+	width: 150px;
+	text-align: right;
+}
+.footertext{
+	margin-top: 5px;
+	color: var(--white);
+	float: left;
+	width: 50%;
+}
+.copyright{
+	float: none;
+	color: var(--white);
 }
