--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,10 +40,11 @@
 	--black-border: #26292d;
 	--white: #fff;
 	--purple: #34547a;
+	--secondary: #eeeff1;
 	--nav-bg: var(--white);
 	--nav-border: var(--black-border);
 	--nav-text: var(--white);
-	--header-bg: var(--white);
+	--header-bg: var(--secondary);
 	--header-text: var(--black);
 	--footer-bg: var(--black);
 	--footer-text: var(--white);
@@ -305,7 +306,7 @@ footer a{
 	row-gap: 30px;
 }
 .textform {
-	max-width: 500px;
+	max-width: 805px;
 	border-radius: 10px;
 }
 .container-4 {
@@ -331,11 +332,10 @@ footer a{
 	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .text-field2 {
-	margin-left: 180px;
-	margin-top: 20px;
-	padding: 10px; 
-	width: 806px; 
-	height: 200px;
+	display: block;
+	width: 300px;
+	height: calc(2.25rem + 2px);
+	padding: 0.375rem 0.75rem;
 	font-family: inherit;
 	font-size: 1rem;
 	font-weight: 400;
@@ -347,6 +347,8 @@ footer a{
 	border-radius: 0.25rem;
 	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 	resize: none;
+	width: 100%;
+	height: 190px;
 }
 .buttn1{
 	margin: 0 auto;
@@ -395,6 +397,21 @@ footer a{
 	width: 50%;
 }
 .copyright{
+	font-size: 9px;
 	float: none;
 	color: var(--white);
+}
+@media (min-width: 800px) and (max-width: 1100px){
+	.header {
+		min-height: 695px;
+		display: flex;
+		justify-content: left;
+		align-items: center;
+		background-color: var(--secondary);
+		background-repeat: no-repeat;
+		background-size: auto;
+		background-position: center center;
+		color: var(--header-text);
+		text-align: left;
+	}
 }
