--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -399,17 +399,64 @@ footer a{
 	float: none;
 	color: var(--white);
 }
-@media (min-width: 800px) and (max-width: 1100px){
+@media (max-width: 1200px){
 	.header {
-		min-height: 695px;
-		display: flex;
-		justify-content: left;
-		align-items: center;
+		background-image: none;
 		background-color: var(--secondary);
-		background-repeat: no-repeat;
-		background-size: auto;
-		background-position: center center;
-		color: var(--header-text);
-		text-align: left;
+		text-align: center;
+		justify-content: center;
+	}
+	.header__title {
+		text-align: center;
+		margin-left: none;
+		margin: 0 auto;
+		max-width: 570px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		row-gap: 40px;
+	}
+	.header__text{
+		text-align: center;
+		margin-left: none;
+		margin: 0 auto;
+		max-width: 570px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		row-gap: 40px;
+	}
+	.buttn_header{
+		margin: 0 auto;
+		display: inline-block;
+		height: 40px;
+		padding: 12px 28px;
+		border-radius: 4px;
+		background-color: var(--purple);
+		color: var(--white);
+		letter-spacing: 0.15px;
+		font-size: 16px;
+		font-weight: 500;
+		transition: opacity 0.2s ease-in;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		max-width: 300px;
+		margin-top: 20px;
+	}
+}
+@media (max-width: 846px){
+	.text-field2{
+		width: 400px;
+	}
+}
+@media (max-width: 434px){
+	.text-field2{
+		width: 300px;
+	}
+}
+@media (max-width: 616px){
+	.buttn{
+		display: none;
 	}
 }
