--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -399,6 +399,47 @@ footer a{
 	float: none;
 	color: var(--white);
 }
+.projects1 {
+	margin-top: 100px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	column-gap: 200px;
+}
+.project1 {
+	margin-top: 20px;
+	color: var(--white);
+	text-align: center;
+}
+.container-5{
+	margin: 0 auto;
+	height: 120px;
+	padding: 0 15px;
+	max-width: 2000px;
+	background-color: #34547a;
+}
+.microsoft{
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	column-gap: 20px;
+}
+.imgs3{
+	margin-bottom: 100px;
+	margin-top: 50px;
+	text-align: center;
+}
+.imgs4{
+	margin-bottom: 100px;
+	margin-top: 50px;
+	text-align: center;
+}
+.imgs5{
+	margin-bottom: 100px;
+	margin-top: 50px;
+	text-align: center;
+}
 @media (max-width: 1200px){
 	.header {
 		background-image: none;
@@ -457,6 +498,31 @@ footer a{
 }
 @media (max-width: 616px){
 	.buttn{
+		display: none;
+	}
+}
+@media (min-width: 1007px) and (max-width: 1217px){
+	.project{
+		max-width: 300px;
+	}
+}
+@media (min-width: 577px) and (max-width: 818px){
+	.project{
+		max-width: 250px
+	}
+}
+@media (max-width: 1127px){
+	.imgs3{
+		display: none;
+	}
+}
+@media (max-width: 872px){
+	.imgs4{
+		display: none;
+	}
+}
+@media (max-width: 617px){
+	.imgs5{
 		display: none;
 	}
 }
