--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -486,12 +486,7 @@ footer a{
 		margin-top: 20px;
 	}
 }
-@media (max-width: 846px){
-	.text-field2{
-		width: 400px;
-	}
-}
-@media (max-width: 434px){
+@media (max-width: 829px){
 	.text-field2{
 		width: 300px;
 	}
@@ -524,5 +519,15 @@ footer a{
 @media (max-width: 617px){
 	.imgs5{
 		display: none;
+	}
+}
+@media (max-width: 861px){
+	.projects1{
+		column-gap: 100px;
+	}
+}
+@media (max-width: 560px){
+	.projects1{
+		column-gap: 50px;
 	}
 }
