--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -236,21 +236,19 @@
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	column-gap: 30px;
-	row-gap: 30px;
 }
-
+img.projecti{
+	filter: alpha (Opacity=100);
+    opacity: 1;
+	transition: all 1s ease-in-out;
+}
+img.projecti:hover{
+	filter: alpha (Opacity=60);
+    opacity: 0.6;
+}
 .project {
 	max-width: 370px;
-	background-color: var(--project-card-bg);
-	box-shadow: var(--box-shadow);
-	border-radius: 10px;
 }
-
-.project__img {
-	border-radius: 10px;
-}
-
 .project__title {
 	padding: 15px 20px 25px;
 	font-weight: 700;
@@ -310,7 +308,7 @@ footer a{
 	border-radius: 10px;
 }
 .container-4 {
-	margin: 0 auto;
+	margin-top: 220px;
 	padding: 0 15px;
 	max-width: 2000px;
 	background-color: #eeeff1;
@@ -439,6 +437,84 @@ footer a{
 	margin-bottom: 100px;
 	margin-top: 50px;
 	text-align: center;
+}
+.projects2{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	column-gap: 20px;
+	row-gap: 20px;
+}
+.project2 {
+	max-width: 350px;
+	background-color: var(--secondary);
+}
+
+.project2__img {
+	border-radius: 4px;
+	width: 100%;	
+}
+
+.project2__title {
+	padding: 15px 20px 25px;
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 1.3;
+	color: var(--black);
+}
+.project2_text{
+	padding: 15px 20px 25px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.3;
+	color: var(--black);
+}
+.project2_op{
+	padding: 5px 20px 25px;
+	font-weight: 400;
+	font-size: 10px;
+	line-height: 1.3;
+	color: var(--black);
+}
+.buttn_obomne1 {
+	margin-top: 70px;
+	display: inline-block;
+	height: 40px;
+	padding: 12px 28px;
+	border-radius: 4px;
+	background-color: var(--purple);
+	color: var(--white);
+	letter-spacing: 0.15px;
+	font-size: 16px;
+	font-weight: 500;
+	transition: opacity 0.2s ease-in;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	max-width: 300px;
+}
+.naviki{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	column-gap: 40px;
+	margin-top: 70px;
+}
+.navikiH{
+	margin-top: 40px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.3;
+	color: var(--black);
+	margin-bottom: 10px;
+}
+.muzhik{
+	margin-right: 40px;
+	height: 300px;
+	width: 350px;
+}
+img.project__img:hover{
+
 }
 @media (max-width: 1200px){
 	.header {
